# tp

template/: install.sh
template/c/: CMakeLists.txt
template/catch2/: CMakeLists.txt
template/cpp/: CMakeLists.txt
template/doctest/: CMakeLists.txt  tests.cpp
